--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -1512,3 +1512,18 @@ section {
   background: #38576f;
   text-decoration: none;
 }
+
+.google-maps {
+    position: relative;
+    padding-bottom: 75%;
+    height: 0;
+    overflow: hidden;
+}
+
+.google-maps iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important;
+}
